[gd_scene load_steps=3 format=3 uid="uid://yl78ppbsj84t"]

[ext_resource type="Script" path="res://scenes/inventory_scene.gd" id="1_inventory_scene"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tooltip"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.7, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="InventoryScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_inventory_scene")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.086275, 0.094118, 0.12549, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Inventar"

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Spieler | Level 1"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.313725, 0.313725, 1)
theme_override_font_sizes/font_size = 30
text = ""

[node name="ContentContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="EquippedPanel" type="Panel" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(300, 300)

[node name="EquippedLabel" type="Label" parent="VBoxContainer/ContentContainer/EquippedPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Ausrüstung"
horizontal_alignment = 1

[node name="EquippedGrid" type="GridContainer" parent="VBoxContainer/ContentContainer/EquippedPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5

[node name="InventoryPanel" type="Panel" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryLabel" type="Label" parent="VBoxContainer/ContentContainer/InventoryPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Inventar"
horizontal_alignment = 1

[node name="InventoryGrid" type="GridContainer" parent="VBoxContainer/ContentContainer/InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.627451, 0.862745, 0.627451, 1)
theme_override_font_sizes/font_size = 26
text = ""

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="EquipButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Anlegen"

[node name="UnequipButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Ablegen"

[node name="ReloadButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Aktualisieren"

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Zurück"

[node name="TooltipPanel" type="Panel" parent="."]
layout_mode = 0
visible = false
custom_minimum_size = Vector2(280, 300)
theme_override_styles/panel = SubResource("StyleBoxFlat_tooltip")

[node name="TooltipLabel" type="RichTextLabel" parent="TooltipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
text = "Tooltip"
